--- a/Code/WorkSpeed.DesktopClient/Resources/DataTemplates.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/DataTemplates.xaml
@@ -163,7 +163,7 @@
 
     <!-- DataGrid -->
     <DataTemplate x:Key="dt_EmployeeTable">
-        <Grid Width="Auto" Height="Auto" Margin="5">
+        <Grid Width="Auto" Height="Auto" Margin="5" HorizontalAlignment="Center">
 
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
@@ -256,6 +256,113 @@
         </Grid>
     </DataTemplate>
 
+    <DataTemplate x:Key="dt_ProductivityTable">
+        <Grid Width="Auto" Height="Auto" Margin="5" HorizontalAlignment="Center">
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="40" />
+                <RowDefinition Height="5*" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+
+            <Border Margin="10,5" Height="Auto">
+                <TextBlock FontSize="24"
+                           HorizontalAlignment="Center"
+                           FontWeight="DemiBold"
+                           Foreground="{StaticResource br_MainWindow.BackgroundAlternative}"
+                           Text="{Binding Header}"
+                />
+            </Border>
+
+            <Button Grid.Row="1" 
+                Content="Сформировать" Width="140" Height="26"
+                Command="{Binding GenerateCommand}"
+                HorizontalAlignment="Left"
+                Margin="0,0"
+        />
+
+            <Grid Grid.Row="2">
+                <DataGrid ItemsSource="{Binding Employees}"
+                      VerticalAlignment="Top"
+                      >
+                    <DataGrid.Columns>
+
+                        <DataGridTextColumn Header="Сотрудник"  
+                                        MinWidth="240"
+                                        Binding="{Binding EmployeeName}" 
+                                        CellStyle="{StaticResource st_VerticalCenteredCell}"
+                                        IsReadOnly="True"
+                                        />
+
+                        <DataGridTextColumn Header="Зона ответственности" 
+                                        MinWidth="180"
+                                        Binding="{Binding Position}" 
+                                        CellStyle="{StaticResource st_VerticalCenteredCell}"
+                                        IsReadOnly="True"
+                                                    />
+                        <DataGridTextColumn Header="Ранг" 
+                                        MinWidth="80"
+                                        Binding="{Binding Rank}" 
+                                        CellStyle="{StaticResource st_CenteredCell}"
+                                        IsReadOnly="True"
+                                                    />
+                        <DataGridTextColumn Header="Курит" 
+                                        Width="70"
+                                        Binding="{Binding IsSmoker}" 
+                                        CellStyle="{StaticResource st_CenteredCell}"
+                                        IsReadOnly="True"
+                                        />
+
+                        <DataGridTextColumn Header="Отработал" 
+                                        Width="100"
+                                        Binding="{Binding WorkTime}" 
+                                        CellStyle="{StaticResource st_CenteredCell}"
+                                        IsReadOnly="True"
+                                        />
+                        <DataGridTextColumn Header="Бездельничал" 
+                                        Width="100"
+                                        Binding="{Binding OffTime}" 
+                                        CellStyle="{StaticResource st_CenteredCell}"
+                                        IsReadOnly="True"
+                                        />
+                        <DataGridTextColumn Header="Собрал строк" 
+                                        Width="98"
+                                        Binding="{Binding GatheredLines}" 
+                                        CellStyle="{StaticResource st_CenteredCell}"
+                                        IsReadOnly="True"
+                                        />
+                        <DataGridTextColumn Header="Скорость, стр./час" 
+                                        Width="120"
+                                        Binding="{Binding GatheringSpeed}" 
+                                        CellStyle="{StaticResource st_CenteredCell}"
+                                        IsReadOnly="True"
+                                        />
+                    </DataGrid.Columns>
+                </DataGrid>
+            </Grid>
+
+
+            <Grid Height="60" Grid.Row="3" >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+
+                <Button Content="Выход" Width="80" Height="26"
+                    Command="{Binding BackwardCommand}"
+                    HorizontalAlignment="Left"
+                    Margin="80,0"
+                    />
+
+                <Button Grid.Column="1" Content="Далее" Width="80" Height="26"
+                    Command="{Binding ForwardCommand}"
+                    HorizontalAlignment="Right"
+                    Margin="80,0"
+                    />
+            </Grid>
+        </Grid>
+    </DataTemplate>
 
 
 </ResourceDictionary>
