--- a/Code/WorkSpeed.DesktopClient/Resources/DataTemplates.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/DataTemplates.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:uc="clr-namespace:WorkSpeed.DesktopClient.Views.UserControls"
                     >
 
     <!-- ImportFile -->
@@ -364,5 +365,52 @@
         </Grid>
     </DataTemplate>
 
+    <DataTemplate x:Key="dt_ShiftList">
+        <Grid Width="Auto" Height="Auto" Margin="5" HorizontalAlignment="Center">
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="5*" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+
+            <Border Margin="10,5" Height="Auto">
+                <TextBlock FontSize="24"
+                           HorizontalAlignment="Center"
+                           FontWeight="DemiBold"
+                           Foreground="{StaticResource br_MainWindow.BackgroundAlternative}"
+                           Text="{Binding Header}"
+                />
+            </Border>
+
+            <StackPanel Orientation="Vertical" Grid.Row="1">
+                <Expander Header="Дневная смена">
+                    <uc:DayShift></uc:DayShift>
+                </Expander>
+                <Expander Header="Ночная смена">
+                    <uc:DayShift></uc:DayShift>
+                </Expander>
+            </StackPanel>
+
+            <Grid Height="60" Grid.Row="3" >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+
+                <Button Content="Выход" Width="80" Height="26"
+                        Command="{Binding BackwardCommand}"
+                        HorizontalAlignment="Left"
+                        Margin="80,0"
+                />
+
+                <Button Grid.Column="1" Content="Далее" Width="80" Height="26"
+                        Command="{Binding ForwardCommand}"
+                        HorizontalAlignment="Right"
+                        Margin="80,0"
+                />
+            </Grid>
+        </Grid>
+    </DataTemplate>
 
 </ResourceDictionary>
